--- a/HTML& CSS/index4.html
+++ b/HTML& CSS/index4.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +7,10 @@
 </head>
 
 <body>
-    <script>
-        var a = 10
-        var b = 20
-        var c = a + b
-        console.log(c)
-        
-
-    </script>
-
+  <script  type="text/JavaScript">
+    console.log("Hellow");
+    
 </body>
 
+</script>
 </html>
